[package]
name = "setns"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = [
    "color",
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
nix = { version = "0.28", features = ["sched"] }
procspawn = "0.10.2"
tokio = { version = "1.41.0", features = ["full", "signal"] }
